# nushell-docset

./: .gitignore  LICENSE  README.md  devenv.nix  flake.nix  generate_docset.py  pyproject.toml
.github/workflows/: release.yml
src/: Makefile  build_release.py  pyproject.toml
